--- a/TestManager/TestManager.csproj
+++ b/TestManager/TestManager.csproj
@@ -5,7 +5,7 @@
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
     <ProjectGuid>{F226D301-E8A1-45B4-96E1-F9121B606537}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <OutputType>WinExe</OutputType>
     <RootNamespace>TestManager</RootNamespace>
     <AssemblyName>TestManager</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
@@ -95,7 +95,6 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Choose.cs" />
     <Compile Include="Common.cs" />
     <Compile Include="ExcelHelper.cs" />
     <Compile Include="Page.cs">
@@ -123,12 +122,6 @@
     <Compile Include="SelectPage.Designer.cs">
       <DependentUpon>SelectPage.cs</DependentUpon>
     </Compile>
-    <Compile Include="TestForm.cs">
-      <SubType>Form</SubType>
-    </Compile>
-    <Compile Include="TestForm.Designer.cs">
-      <DependentUpon>TestForm.cs</DependentUpon>
-    </Compile>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <EmbeddedResource Include="Page.resx">
@@ -142,9 +135,6 @@
     </EmbeddedResource>
     <EmbeddedResource Include="SelectPage.resx">
       <DependentUpon>SelectPage.cs</DependentUpon>
-    </EmbeddedResource>
-    <EmbeddedResource Include="TestForm.resx">
-      <DependentUpon>TestForm.cs</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="Properties\Resources.resx">
       <Generator>ResXFileCodeGenerator</Generator>
